# media_indexer

./: .checkpoint.json  .cursorrules  .gitignore  .pydocstyle  2015.checkpoint  2016.checkpoint  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  USAGE_EXAMPLES.md  debug_segfault.py  debug_with_gdb.sh  pyproject.toml  requirements.sdoc  setup.py
.cursor/rules/: commit-attribution.mdc  git-commits.mdc  makefiles.mdc  notebooks.mdc  python.mdc  requirements.mdc  safety.mdc  strictdoc.mdc
.githooks/: pre-commit
docs/refactoring_analysis/: part1_overview.md  part2_recommendations.md
docs/requirements/html/: index.html
docs/requirements/html/_static/: project_map.js  static_html_search_index.js
docs/requirements/html/media_indexer/: requirements-DEEP-TRACE.html  requirements-TABLE.html  requirements-TRACE.html  requirements.html
githooks/: pre-commit
requirements/: cli_and_observability.sdoc  database_and_storage.sdoc  engineering_workflow_and_tooling.sdoc  governance_and_compliance.sdoc  processing_pipeline.sdoc
scripts/: check_line_lengths.py  install_dlib_cuda.py
src/media_indexer/: __init__.py  benchmark_exif.py  benchmark_sidecar_scanning.py  cli.py  cli_handlers.py  db_manager.py  download_models.py  exif_extractor.py  face_detector.py  feature_extractor.py  gpu_validator.py  model_cache.py  object_detector.py  pose_detector.py  processor.py  processor.py.old  raw_converter.py  sidecar_converter.py  sidecar_converter_exporter.py  sidecar_converter_importer.py  sidecar_generator.py
src/media_indexer/analytics/: __init__.py  face_attribute_analyzer.py
src/media_indexer/db/: __init__.py  connection.py  exif.py  exif_tag.py  exif_tag_value.py  face.py  hash_util.py  image.py  metadata_converter.py  migrations.py  object.py  pose.py  session_manager.py
src/media_indexer/processor/: __init__.py  analysis_scanner.py  core.py  core_pipeline.py  image_processor.py  object_emoji.py  progress.py  statistics.py
src/media_indexer/utils/: __init__.py  cancellation.py  file_utils.py  image_utils.py  model_utils.py  parallel_executor.py  progress.py  sidecar_utils.py  suppression.py
